--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/tamakiii-sandbox/hello-gha-docker/issues"
   },
-  "homepage": "https://github.com/tamakiii-sandbox/hello-gha-docker#readme"
+  "homepage": "https://github.com/tamakiii-sandbox/hello-gha-docker#readme",
+  "dependencies": {
+    "jest": "^29.5.0"
+  }
 }
