--- a/.github/workflow/test.yaml
+++ b/.github/workflow/test.yaml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
-      # - uses: docker/build-push-action@v4
-      #   with:
-      #     push: false
-      #     cache-from: type=gha
-      #     cache-to: type=gha,mode=max
+      - uses: docker/build-push-action@v4
+        with:
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
