--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,3 +17,8 @@ jobs:
           push: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - run: |
+          which docker
+          docker --version
+          docker buildx version
+          docker image ls
