--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,9 +6,6 @@ on:
     branches:
       - main
 
-env:
-  TAG: ${{ vars.GITHUB_REF_NAME }}
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -18,7 +15,7 @@ jobs:
       - uses: docker/build-push-action@v4
         with:
           push: false
-          tags: ${{ github.repository }}:${{ env.TAG }}
+          tags: ${{ github.repository }}:${{ vars.GITHUB_REF_NAME }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - run: |
