--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,15 +10,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - id: branch
-        run: echo "##[set-output name=name;]$(echo ${GITHUB_REF#refs/heads/})"
-        shell: bash
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
       - uses: docker/build-push-action@v4
         with:
           push: false
-          tags: ${{ github.repository }}:${{ steps.branch.outputs.name }}
+          tags: ${{ github.repository }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - run: |
