--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,8 +18,4 @@ jobs:
           tags: ${{ github.repository }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - run: |
-          which docker
-          docker --version
-          docker buildx version
-          docker image ls
+      - run: docker run -it --rm ${{ github.repository }}:latest cat /etc/os-release
