--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,9 +19,4 @@ jobs:
           tags: ${{ github.repository }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - run: |
-          which docker
-          docker --version
-          docker buildx version
-          docker image ls
-      - run: docker run --rm ${{ github.repository }}:latest cat /etc/os-release
+      - run: make -f docker.mk test IMAGE=${{ github.repository }} TAG=latest
