--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,7 @@ jobs:
           tags: ${{ github.repository }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - run: make -f docker.mk test IMAGE=${{ github.repository }} TAG=latest
+      - run: make -f docker.mk test
+        env:
+          IMAGE: ${{ github.repository }}
+          TAG: latest
