--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/tamakiii-sandbox/hello-gha-docker#readme",
   "dependencies": {
-    "jest": "^29.5.0"
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "semantic-release": "^20.1.1"
   }
 }
