--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hello-gha-docker",
   "version": "1.0.0",
   "description": "## How to use ```sh make -f docker.mk build ```",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
