--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,6 @@ jobs:
         with:
           node-version: 18
       - run: npm install --include=dev
-      - run: npx --no -- semantic-release
+      - run: npx --no -- semantic-release --branches main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
