--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,10 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
       - uses: docker/build-push-action@v4
+        env:
+          TAG: ${GITHUB_REF#refs/heads/}
         with:
           push: false
           load: true
-          tags: ${{ github.repository }}:${GITHUB_REF#refs/heads/}
+          tags: ${{ github.repository }}:${{ env.TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - run: make -f docker.mk test
