--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,19 +10,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - id: branch
-        run: echo "::set-output name=name::${GITHUB_REF#refs/heads/}"
-        shell: bash
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
       - uses: docker/build-push-action@v4
         with:
           push: false
           load: true
-          tags: ${{ github.repository }}:${{ steps.branch.outputs.name }}
+          tags: ${{ github.repository }}:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - run: make -f docker.mk test
         env:
           IMAGE: ${{ github.repository }}
-          TAG: ${{ steps.branch.outputs.name }}
+          TAG: test
