--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,11 +1,9 @@
 name: Docker
 
 on:
-  create:
-    branches-ignore:
-      - '**'
-    tags:
-      - v*
+  release:
+    types:
+      - published
 jobs:
   build:
     runs-on: ubuntu-latest
